--- a/index.html
+++ b/index.html
@@ -7,7 +7,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="msg-container hide">
+        <p id="msg">Winner</p>
+        <button id="new-btn">NEW GAME</button>
+    </div>
+    <main>
+        <h1>Tic Tac Toe</h1>
+        
+        <div class="container">
+            <div class="game">
+                <button class="box"></button>
+                <button class="box"></button>
+                <button class="box"></button>
+                <button class="box"></button>
+                <button class="box"></button>
+                <button class="box"></button>
+                <button class="box"></button>
+                <button class="box"></button>
+                <button class="box"></button>
+            </div>
+        </div>
+        <button id="reset-btn">RESET</button>
+    </main>
     <script src="app.js"></script>
 </body>
 </html>
